# spark-dev

./: .env  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: cap1_e2e_pipeline.py  example_dag.py
app/notebooks/: 01_setup_tables.ipynb  02_streaming_to_iceberg.ipynb  03_query_iceberg.ipynb  04_sales_streaming_to_iceberg.ipynb
capstone/: README.md  cap1_pipeline.py
capstone/incident_simulator/: README.md  inc1_slow_skew.md  inc2_driver_oom.md  inc3_small_files.md  inc4_kafka_hot_partition.md  inc5_cdc_wal_growth.md  inc6_late_data.md  inc7_backfill_double_count.md  inc8_stream_restart_dupes.md
common/: README.md  __init__.py  cdc_helpers.py  datagen.py  kafka_helpers.py  metrics_diff.py  profiles.py  spark_session.py
conf/: spark-defaults.conf
dbt/: package-lock.yml
dbt/dbt-polyglot/: CHANGELOG.md  MANIFEST.in  README.md  dbt_polyglot.pth  pyproject.toml  setup.py
dbt/dbt-polyglot/.github/workflows/: ci-dbt-polyglot.yml  ci.yml  release-dbt-polyglot.yml  release.yml
dbt/dbt-polyglot/src/dbt_polyglot/: __init__.py  fixups.py  transpile.py
dbt/dbt-polyglot/tests/: test_transpile.py
dbt/seeds/: orders.csv
debezium/: README.md
docs/: CURRICULUM_BRIEF.md  CURRICULUM_PLAN.md  LEARNING_PATH.md  OBSERVABILITY.md  SNOWFLAKE_ON_SPARK.md  TRANSPILE_COVERAGE.md  spark-ui-guide.md  troubleshooting.md
iceberg/: README.md
iceberg/format_comparison/: lak1_format_comparison.ipynb
kafka/: README.md
quality/: README.md
scripts/: docker-entrypoint.sh
spark/: README.md
spark/aqe/: README.md  (+1 more)
(+38 files in other folders)
